Add Unit testing of Customer Add and Show

--- a/nbproject/project.properties
+++ b/nbproject/project.properties
@@ -35,9 +35,12 @@ dist.jlink.dir=${dist.dir}/jlink
 dist.jlink.output=${dist.jlink.dir}/WeekendFitnessClub
 endorsed.classpath=
 excludes=
+file.reference.junit-4.13.2.jar=junit-4.13.2.jar
 includes=**
 jar.compress=false
-javac.classpath=
+javac.classpath=\
+    ${file.reference.junit-4.13.2.jar}:\
+    ${libs.hamcrest.classpath}
 # Space-separated list of extra javac options
 javac.compilerargs=
 javac.deprecation=false
@@ -50,7 +53,8 @@ javac.source=19
 javac.target=19
 javac.test.classpath=\
     ${javac.classpath}:\
-    ${build.classes.dir}
+    ${build.classes.dir}:\
+    ${libs.junit_5.classpath}
 javac.test.modulepath=\
     ${javac.modulepath}
 javac.test.processorpath=\
