--- a/nbproject/project.properties
+++ b/nbproject/project.properties
@@ -77,7 +77,7 @@ jlink.additionalmodules=
 jlink.additionalparam=
 jlink.launcher=true
 jlink.launcher.name=WeekendFitnessClub
-main.class=weekendfitnessclub.WeekendFitnessClub
+main.class=weekendfitnessclub.Application
 manifest.file=manifest.mf
 meta.inf.dir=${src.dir}/META-INF
 mkdist.disabled=false
